--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@types/jsonwebtoken": "^8.3.7",
     "@types/lusca": "^1.7.0",
+    "@types/multer": "^1.4.7",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
@@ -30,8 +31,12 @@
     "lusca": "^1.7.0",
     "mongodb-memory-server": "^6.3.1",
     "mongoose": "^5.11.15",
+    "multer": "^1.4.5-lts.1",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.7",
     "winston": "^3.2.1"
   },
   "devDependencies": {
