--- a/api/package.json
+++ b/api/package.json
@@ -21,6 +21,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/lusca": "^1.7.0",
     "@types/multer": "^1.4.7",
+    "bcrypt": "^5.0.1",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
@@ -40,6 +41,7 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/errorhandler": "^0.0.32",
     "@types/eslint": "^6.1.8",
     "@types/express": "^4.17.2",
