--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "@types/lusca": "^1.7.0",
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
