--- a/api/package.json
+++ b/api/package.json
@@ -35,6 +35,7 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
