--- a/api/package.json
+++ b/api/package.json
@@ -23,9 +23,11 @@
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
     "husky": "^4.2.3",
     "jsonwebtoken": "^8.5.1",
     "lint-staged": "^10.0.8",
@@ -35,6 +37,7 @@
     "mongoose": "^5.11.15",
     "multer": "^1.4.5-lts.1",
     "passport": "^0.4.1",
+    "passport-google-oauth20": "^2.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.3",
@@ -44,15 +47,18 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cors": "^2.8.12",
     "@types/errorhandler": "^0.0.32",
     "@types/eslint": "^6.1.8",
     "@types/express": "^4.17.2",
+    "@types/express-session": "^1.17.5",
     "@types/jest": "^24.9.1",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.28",
     "@types/node-sass": "^4.11.0",
     "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.2",
+    "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "@types/winston": "^2.4.4",
