--- a/api/package.json
+++ b/api/package.json
@@ -46,13 +46,16 @@
     "winston": "^3.2.1"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "@babel/preset-typescript": "^7.18.6",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/errorhandler": "^0.0.32",
     "@types/eslint": "^6.1.8",
     "@types/express": "^4.17.2",
     "@types/express-session": "^1.17.5",
-    "@types/jest": "^24.9.1",
+    "@types/jest": "^28.1.7",
     "@types/lodash": "^4.14.149",
     "@types/node": "^12.12.28",
     "@types/node-sass": "^4.11.0",
@@ -64,13 +67,14 @@
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
+    "babel-jest": "^28.1.3",
     "eslint": "^6.8.0",
-    "jest": "^26.6.3",
+    "jest": "^28.1.3",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2",
-    "ts-jest": "^26.5.1",
+    "ts-jest": "^28.0.8",
     "ts-node": "^8.6.2",
-    "typescript": "^3.8.2"
+    "typescript": "^4.7.4"
   },
   "husky": {
     "hooks": {
@@ -82,8 +86,5 @@
       "npx prettier --write",
       "eslint --fix"
     ]
-  },
-  "jest": {
-    "testEnvironment": "node"
   }
 }
