--- a/api/package.json
+++ b/api/package.json
@@ -9,7 +9,7 @@
   "author": "Bowden Kelly",
   "license": "MIT",
   "scripts": {
-    "start:prod": "node dist/server.js",
+    "start": "node dist/server.js",
     "start:dev": "nodemon src/server.ts",
     "build": "tsc",
     "watch-ts": "tsc -w",
@@ -57,13 +57,14 @@
     "@types/express-session": "^1.17.5",
     "@types/jest": "^28.1.7",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^12.12.28",
+    "@types/node": "^18.7.11",
     "@types/node-sass": "^4.11.0",
     "@types/nodemailer": "^6.4.0",
     "@types/passport": "^1.0.2",
     "@types/passport-google-oauth20": "^2.0.11",
     "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.12",
+    "@types/validator": "^13.7.5",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^2.21.0",
     "@typescript-eslint/parser": "^2.21.0",
@@ -86,5 +87,9 @@
       "npx prettier --write",
       "eslint --fix"
     ]
-  }
+  },
+  "engines": {
+    "node": "16.15.x"
+  },
+  "type": "module"
 }
