--- a/api/tsconfig.json
+++ b/api/tsconfig.json
@@ -13,6 +13,7 @@
     "sourceMap": true,
     "outDir": "dist",
     "baseUrl": ".",
+    "module": "commonjs",
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
     }
