--- a/api/package.json
+++ b/api/package.json
@@ -23,6 +23,7 @@
     "@types/multer": "^1.4.7",
     "bcrypt": "^5.0.1",
     "class-validator": "^0.13.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "errorhandler": "^1.5.1",
@@ -50,6 +51,7 @@
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-typescript": "^7.18.6",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/cors": "^2.8.12",
     "@types/errorhandler": "^0.0.32",
     "@types/eslint": "^6.1.8",
